# CFG_builder

./: CMakeLists.txt  README.md  output.json  output.md
include/app/: Config.h  ToolRunner.h
include/ast/: FunctionCollector.h
include/cfg/: CFGBuilderService.h
include/common/: Diagnostics.h
include/frontend/: CFGFrontendAction.h
include/output/: CFGPrinter.h
scripts/: run_one_tu.sh  test_ast_stmt_begin_end.sh  test_var_loc_defs_uses.sh
src/: main.cpp
src/app/: Config.cpp  ToolRunner.cpp
src/ast/: FunctionCollector.cpp
src/cfg/: CFGBuilderService.cpp
src/common/: Diagnostics.cpp
src/frontend/: CFGFrontendAction.cpp
src/output/: CFGPrinter.cpp
temp/: control_flow_all.json
testdata/: compile_commands.json  control_flow_all.c  simple.c  stmt_begin_end.c  var_loc_case.c
